--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 ## Please do not remove line 12 - thanks! 🙂 ##
 ###############################################
 *.xd
+Challenges/002-Recipe-page/assets/fonts/**
 
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
